# clawcheck

./: LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-04-feat-clawcheck-openclaw-vulnerability-scanner-plan.md
src/clawcheck/: __init__.py  cli.py  discovery.py  models.py  output.py  probe.py  vuln_db.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_models.py  test_output.py  test_vuln_db.py
