[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawcheck"
version = "1.0.0"
description = "OpenClaw vulnerability scanner - Detect ClawJacked (CVE-2026-CLAW)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ClawCheck Contributors" }
]
keywords = ["security", "openclaw", "vulnerability", "scanner", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
clawcheck = "clawcheck.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/clawcheck"
Documentation = "https://github.com/yourusername/clawcheck#readme"
Repository = "https://github.com/yourusername/clawcheck"
Issues = "https://github.com/yourusername/clawcheck/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
